--- a/Stopaholic.server/Stopaholic.server.csproj
+++ b/Stopaholic.server/Stopaholic.server.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shopaholic.Shared\Shopaholic.Shared.csproj" />
+    <ProjectReference Include="..\Shopaholic.Shared\Stopaholic.Shared.csproj" />
   </ItemGroup>
 
 </Project>
