--- a/Stopaholic.server/appsettings.json
+++ b/Stopaholic.server/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Database=StopaholicDb;Username=postgres;Password=cameron831"
+    }
+  
+
+  
+
 }
