--- a/Stopaholic.server/Stopaholic.server.csproj
+++ b/Stopaholic.server/Stopaholic.server.csproj
@@ -7,12 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Shopaholic.Shared\Stopaholic.Shared.csproj" />
+    <ProjectReference Include="..\Stopaholic\Stopaholic\Stopaholic.csproj" />
   </ItemGroup>
 
 </Project>
